# MNN

./: .gitignore  test.md
apps/Android/MnnLlmChat/app/: .gitignore  build.gradle
apps/Android/MnnLlmChat/app/src/main/cpp/: CMakeLists.txt
apps/Android/MnnMultiModalAudioDemo/: README.md  build.gradle  gradle.properties  settings.gradle
apps/Android/MnnMultiModalAudioDemo/app/: build.gradle
apps/Android/MnnMultiModalAudioDemo/app/src/main/: AndroidManifest.xml
apps/Android/MnnMultiModalAudioDemo/app/src/main/cpp/: CMakeLists.txt  multimodal_audio_jni.cpp
apps/Android/MnnMultiModalAudioDemo/app/src/main/java/com/alibaba/mnnllm/multimodal/audio/: AudioHandler.kt  ChatAdapter.kt  MainActivity.kt  SimpleWaveRecorder.kt  TtsManager.kt  WaveformView.kt
apps/Android/MnnMultiModalAudioDemo/app/src/main/res/drawable/: bg_chat_bubble_ai.xml  bg_chat_bubble_user.xml  bg_input_field.xml  bg_voice_button.xml  ic_bot.xml  ic_mic.xml  ic_send.xml
apps/Android/MnnMultiModalAudioDemo/app/src/main/res/layout/: activity_main.xml  item_chat_ai.xml  item_chat_user.xml
apps/Android/MnnMultiModalAudioDemo/app/src/main/res/values/: colors.xml  strings.xml
apps/frameworks/mnn_tts/: CMakeLists.txt
apps/frameworks/model_downloader/android/src/main/java/com/alibaba/mls/api/download/: DownloadFileUtils.kt  ModelDownloadManager.kt
apps/frameworks/model_downloader/android/src/main/java/com/alibaba/mls/api/download/ms/: MsModelDownloader.kt
transformers/llm/engine/src/: omni.cpp  omni.hpp
